--- a/index.html
+++ b/index.html
@@ -5,33 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/index.css">
     <title>Calculate Me</title>
 </head>
 
 <body>
 
-    <div class="container mx-auto">
-        <div id="output"></div>
-        <button class="userInput">7</button>
-        <button class="userInput">8</button>
-        <button class="userInput">9</button>
-        <button class="userInput">4</button>
-        <button class="userInput">5</button>
-        <button class="userInput">6</button>
-        <button class="userInput">1</button>
-        <button class="userInput">2</button>
-        <button class="userInput">3</button>
-        <button class="userInput">0</button>
-        <button class="userInput">*</button>
-        <button class="userInput">/</button>
-        <button class="userInput">-</button>
-        <button class="userInput">+</button>
-        <button class="userInput">,</button>
-        <button class="userInput">=</button>
-        <button  id="clear">Clear</button>
-        <button  id="clear">Back</button>
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col">
+
+                <div class="grid-container">
+
+                    <div class="grid-output" id="output"></div>
+                    <div class="grid-button1"><button class="userInput" onclick="addToSum('1')">1</button></div>
+                    <div class="grid-button2"><button class="userInput" onclick="addToSum('2')">2</button></div>
+                    <div class="grid-button3"><button class="userInput" onclick="addToSum('3')">3</button></div>
+                    <div class="grid-button4"><button class="userInput" onclick="addToSum('+')">+</button></div>
+                    <div class="grid-button5"><button class="userInput" onclick="addToSum('4')">4</button></div>
+                    <div class="grid-button6"><button class="userInput" onclick="addToSum('5')">5</button></div>
+                    <div class="grid-button7"><button class="userInput" onclick="addToSum('6')">6</button></div>
+                    <div class="grid-button8"><button class="userInput" onclick="addToSum('-')">-</button></div>
+                    <div class="grid-button9"><button class="userInput" onclick="addToSum('7')">7</button></div>
+                    <div class="grid-button10"><button class="userInput" onclick="addToSum('8')">8</button></div>
+                    <div class="grid-button11"><button class="userInput" onclick="addToSum('9')">9</button></div>
+                    <div class="grid-button12"><button class="userInput" onclick="addToSum('*')">*</button></div>
+                    <div class="grid-button13"><button class="userInput" onclick="addToSum('0')">0</button></div>
+                    <div class="grid-button14"><button class="userInput" onclick="addToSum(',')">,</button></div>
+                    <div class="grid-button15"><button class="userInput" onclick="addToSum('/')">/</button></div>
+                    <div class="grid-button16"><button class="userInput" onclick="evaluateSum()">=</button></div>
+                    <div class="grid-button17"><button class="userInput" id="clearbtns" onclick="backspace()">Back</button></div>
+                    <div class="grid-button18"><button class="userInput" id="clearbtns" onclick="clearSum()">Clear</button></div>
+
+                </div>
+
+            </div>
+
+        </div>
+
 
     </div>
 
