--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <div class="grid-button14"><button class="userInput" onclick="addToSum(',')">,</button></div>
                     <div class="grid-button15"><button class="userInput" onclick="addToSum('/')">/</button></div>
                     <div class="grid-button16"><button class="userInput" onclick="evaluateSum()">=</button></div>
-                    <div class="grid-button17"><button class="userInput" id="clearbtns" onclick="backspace()">Back</button></div>
-                    <div class="grid-button18"><button class="userInput" id="clearbtns" onclick="clearSum()">Clear</button></div>
+                    <div class="grid-button17"><button class="userInput" id="clearbtns" onclick="backspace()"><i class="fa-sharp fa-solid fa-delete-left"></i></button></div>
+                    <div class="grid-button18"><button class="userInput" id="clearbtns" onclick="clearSum()"><i class="fa-sharp fa-solid fa-trash-can-arrow-up"></i></button></div>
 
                 </div>
 
