--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="grid-button11"><button class="userInput" onclick="addToSum('9')">9</button></div>
                     <div class="grid-button12"><button class="userInput" onclick="addToSum('*')">*</button></div>
                     <div class="grid-button13"><button class="userInput" onclick="addToSum('0')">0</button></div>
-                    <div class="grid-button14"><button class="userInput" onclick="addToSum(',')">,</button></div>
+                    <div class="grid-button14"><button class="userInput" onclick="addToSum('.')">.</button></div>
                     <div class="grid-button15"><button class="userInput" onclick="addToSum('/')">/</button></div>
                     <div class="grid-button16"><button class="userInput" onclick="evaluateSum()">=</button></div>
                     <div class="grid-button17"><button class="userInput" id="clearbtns" onclick="backspace()"><i class="fa-sharp fa-solid fa-delete-left"></i></button></div>
